# spot-robot

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  sample.env
design/: .gitignore
simulation/: move.py  run.py
simulation/urdf/: robot-simple-2.urdf  robot-simple.urdf
src/squad/: compat.py  config.py  constants.py  exceptions.py  graphs.py  math.py  types.py  utils.py
src/squad-arduino/: main.ino
src/squad/communication/: __init__.py  arduino.py  arduino_io.py  base.py  serial_io.py
src/squad/compute/: curves.py  geometry.py  kalman.py  mdp.py
src/squad/engine/: __init__.py
src/squad/engine/messaging/: __init__.py  base.py  constants.py  messages.py  utils.py
src/squad/engine/messaging/endpoints/: __init__.py  arduino.py
src/squad/kinematics/: __init__.py  base.py  core.py  forward.py  inverse.py  solver.py  states.py
src/squad/motion/: __init__.py  base.py  leg_steppers.py  manager.py  movement.py  states.py
src/squad/motion/controllers/: __init__.py  base.py  leg_bezier.py  leg_linear.py
src/squad/navigation/: base.py  maps.py
